# C-Threads

./: .travis.yml  CMakeLists.txt  README.md  README.rst  main.c
dynamic_lib/: CMakeLists.txt  transpose_thread.c
include/: defines.h  matrix.h
include/dynamic/: d_transpose.h
src/: main.c  matrix.c
src/dynamic/: d_transpose.c
src/static/: s_transpose.c
static_lib/: CMakeLists.txt  transpose.c  transpose.h
test/: CMakeLists.txt  test.cpp
test/dynamicLibTest/: dynamicLibTest.cpp
test/staticLibTest/: staticLibTest.cpp
